--- a/styles.css
+++ b/styles.css
@@ -70,12 +70,25 @@ img {
     width: 40%;
 }
 
+.inputBox {
+    border: 2px solid red;
+    display: flex;
+}
+
 .playerText {
     margin: 10px;
     font-size: 24px;
     margin-left: auto;
     margin-right: auto;
     width: 50%;
+}
+
+.playerInput {
+    border: 2px solid red;
+}
+
+.computerInput {
+    border: 2px solid red;
 }
 
 #scorePlayer {
