--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@
 }
 
 .main-box {
-    padding: 200px;
+    padding: 50px;
     justify-content: center;
     align-items: center;
     background-color: grey;
@@ -39,6 +39,13 @@
 img {
     height: auto;
     width: 150px;
+    mix-blend-mode: multiply;
+    border-radius: 25%;
+}
+
+button {
+    border-radius: 50%;
+    border: 4px solid white;
 }
 
 .scorebox {
@@ -71,7 +78,6 @@ img {
 }
 
 .inputBox {
-    border: 2px solid red;
     display: flex;
 }
 
@@ -83,12 +89,20 @@ img {
     width: 50%;
 }
 
-.playerInput {
-    border: 2px solid red;
+#playerInput {
+    margin: 10px;
+    font-size: 24px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
 }
 
-.computerInput {
-    border: 2px solid red;
+#computerInput {
+    margin: 10px;
+    font-size: 24px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
 }
 
 #scorePlayer {
