--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,9 @@
     flex-direction: column;
     font-family: 'arial';
     font-weight: bold;
-    color: white;
+    color: black;
 }
+
 
 .header {
     display: flex;
@@ -15,14 +16,17 @@
     text-align: center;
     font-size: 40px;
     font-family: 'arial';
-    color: white;
+    color: black;
+    background-color: white;
+
 }
 
 .main-box {
     padding: 50px;
     justify-content: center;
     align-items: center;
-    background-color: grey;
+    background-color: white;
+
 }
 
 .rps-box {
@@ -36,19 +40,34 @@
     justify-content: center;
 }
 
-img {
-    height: auto;
+button {
+    height: 60px;
     width: 150px;
-    mix-blend-mode: multiply;
-    border-radius: 25%;
+    padding: 15px 25px;
+    font-size: 24px;
+    text-align: center;
+    cursor: pointer;
+    outline: none;
+    color: #fff;
+    background-color: blue;
+    border: none;
+    border-radius: 15px;
+    box-shadow: 0 9px #999;
+
 }
 
-button {
-    border-radius: 50%;
-    border: 4px solid white;
+button:hover {
+    background-color: #3e8e41
+}
+
+button:active {
+    background-color: #3e8e41;
+    box-shadow: 0 5px #666;
+    transform: translateY(4px);
 }
 
 .scorebox {
+    border-width: 1px;
     padding: 50px;
     justify-content: center;
     align-items: center;
@@ -58,7 +77,9 @@ button {
     width: 50%;
 }
 
+
 #winner {
+
     padding: 15px;
     margin-left: auto;
     margin-right: auto;
@@ -66,19 +87,23 @@ button {
     justify-content: center;
     align-items: center;
     margin-bottom: 5px;
+
 }
 
 .innerBox {
-    display: block;
+    display: flex;
     justify-content: center;
     align-items: center;
     margin-left: auto;
     margin-right: auto;
     width: 40%;
+
 }
 
 .inputBox {
-    display: flex;
+    display: block;
+    height: 75%;
+    width: 75%;
 }
 
 .playerText {
@@ -95,6 +120,7 @@ button {
     margin-left: auto;
     margin-right: auto;
     width: 50%;
+
 }
 
 #computerInput {
@@ -111,6 +137,7 @@ button {
     margin-left: auto;
     margin-right: auto;
     width: 5%;
+    font-size: 40px;
 }
 
 #scoreComputer {
@@ -119,17 +146,17 @@ button {
     margin-left: auto;
     margin-right: auto;
     width: 5%;
+    font-size: 40px;
 }
 
 .footer {
-    display: flex;
-    padding: 150px;
-    font-size: 15px;
-    text-align: center;
-    justify-content: center;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: white;
     color: black;
-    gap: 10px;
-    background-color: grey;
+    text-align: center;
 }
 
 .git-icon {
